[package]
name         = "ethereum-ibc-proto"
edition      = "2021"
version      = "0.1.0"

[lib]
name = "ethereum_ibc_proto"
path = "src/lib.rs"
doctest = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost       = { version = "0.11", default-features = false }
serde       = { version = "1.0", default-features = false }
schemars    = { version = "0.8", optional = true }

[features]
default     = ["std"]
std         = []
