[package]
name = "ethereum-ibc"
version = "0.1.0"
edition = "2021"

[dependencies]
ibc = { version = "0.29.0", default-features = false, features = ["serde"] }
ibc-proto = { version = "0.26.0", default-features = false, features = ["parity-scale-codec", "borsh"] }
serde = { version = "1.0", default-features = false }
prost = { version = "0.11", default-features = false }
displaydoc = { version = "0.2", default-features = false }
bytes = { version = "1.2.1", default-features = false }
rlp = { version = "0.5.2", default-features = false }
tiny-keccak = { version = "2.0.2", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc", "serde"] }
ssz-rs = { git = "https://github.com/bluele/ssz_rs", branch = "serde-no-std", default-features = false, features = ["serde"] }

ethereum-ibc-proto = { path = "../../proto", default-features = false }
ethereum-consensus = { git = "https://github.com/datachainlab/ethereum-light-client-rs", rev = "1ac6905ad7020fd377e66e0ac116d41509cca1fe", default-features = false }
ethereum-light-client-verifier = { git = "https://github.com/datachainlab/ethereum-light-client-rs", rev = "1ac6905ad7020fd377e66e0ac116d41509cca1fe", default-features = false }
